# gsim

./: .travis.yml  CMakeLists.txt  README.md  cmake_uninstall.cmake.in  run_cmake
cmake/: pkgconfig.cmake
examples/: CMakeLists.txt  GSIMEnv.cmake
examples/empty/: CMakeLists.txt  main.cpp
examples/empty_connection/: CMakeLists.txt  main.cpp
examples/empty_connection_udp/: CMakeLists.txt  main.cpp
examples/multiconnection/: CMakeLists.txt  Types.hpp  main.cpp
examples/simple/: CMakeLists.txt  Types_adapted.hpp  main.cpp
examples/simple_adapted/: CMakeLists.txt  main.cpp
examples/simple_custom_widget/: CMakeLists.txt  ForbiddenStringWidget.cpp  ForbiddenStringWidget.hpp  main.cpp
examples/simple_unsupported/: CMakeLists.txt  Types.hpp  main.cpp
examples/status/: CMakeLists.txt  Types.hpp  Types_adapted.hpp  main.cpp
examples/tcp/: CMakeLists.txt  Types.hpp  Types_adapted.hpp  main.cpp
gsim/: CMakeLists.txt  adapted.hpp  types.hpp  version.hpp  version.hpp.in
gsim/cmake/: CMakeLists.txt  GSIMEnv.cmake  GSIMEnv.cmake.in
gsim/core/: copy.hpp  descriptor.cpp  descriptor.hpp  descriptor_fwd.hpp  descriptor_utils.hpp  event.cpp  event.hpp  event_fwd.hpp  file_format_helper.cpp  file_format_helper.hpp  holder.cpp  holder.hpp  mpl.hpp  properties.cpp  properties.hpp  tag.hpp  types_repository.cpp  types_repository.hpp
gsim/core/detail/: adapted.hpp  descriptor.hpp  descriptor.ipp  descriptor_explicit.ipp  holder.ipp  types_repository.cpp  types_repository.hpp
gsim/io/: CMakeLists.txt  Connection.cpp  Connection.hpp  TCPConnection.cpp  TCPConnection.hpp  UDPConnection.cpp  UDPConnection.hpp
gsim/json/: converter.hpp  helper.hpp  parser.hpp  reflective.cpp  reflective.hpp  writer.hpp
gsim/json/detail/: json.hpp  json_parse.hpp  json_writer.hpp
gsim/qt/: Application.cpp  Application.hpp  CMakeLists.txt  constants.hpp  export.hpp  initialize.cpp  initialize.hpp  json.cpp  json.hpp  types.hpp
gsim/qt/item/: ApplicationLogModel.cpp  ApplicationLogModel.hpp  HolderModel.cpp  HolderModel.hpp  LogModel.cpp  LogModel.hpp  MessageModel.cpp  MessageModel.hpp  ModelNode.cpp  ModelNode.hpp  OperationsView.cpp  OperationsView.hpp  ParameterModel.cpp  ParameterModel.hpp
gsim/qt/model/: Connection.cpp  Connection.hpp  Connection.ipp  Controller.cpp  Controller.hpp  GenericConnection.cpp  GenericConnection.hpp  GenericConnection_Data.hpp  StatusManager.cpp  StatusManager.hpp
gsim/qt/proc/: DumpProcessor.cpp  DumpProcessor.hpp  FileLoaderProcessor.cpp  FileLoaderProcessor.hpp  HolderEmitter.cpp  HolderEmitter.hpp  MessageProcessor.cpp  MessageProcessor.hpp  MessageProcessorManager.cpp  MessageProcessorManager.hpp
gsim/qt/reflective/: BCDWidget.cpp  BCDWidget.hpp  BigTextWidget.cpp  BigTextWidget.hpp  BitSetWidget.cpp  BitSetWidget.hpp  BoolWidget.cpp  BoolWidget.hpp  CustomWidgets.hpp  DateTimeWidget.cpp  DateTimeWidget.hpp  DragAndDrop.cpp  DragAndDrop.hpp  EnumWidget.cpp  EnumWidget.hpp  FixedPointWidget.cpp  FixedPointWidget.hpp  FloatWidget.cpp  FloatWidget.hpp  HexWidget.cpp  HexWidget.hpp  IPAddressWidget.cpp  IPAddressWidget.hpp  IntegerWidget.cpp  IntegerWidget.hpp  LSBWidget.cpp  LSBWidget.hpp  MessageForm.cpp  MessageForm.hpp  QVariantHelper.cpp  QVariantHelper.hpp  ReflectiveItemDelegate.cpp  ReflectiveItemDelegate.hpp  ReflectiveTreeWidget.cpp  ReflectiveTreeWidget.hpp  ReflectiveWidget.cpp  ReflectiveWidget.hpp  SendMessageDialog.cpp  SendMessageDialog.hpp  SequenceWidget.cpp  (+13 more)
gsim/qt/script/: ReflectiveScriptClass.cpp  ReflectiveScriptClass.hpp  ScriptEngine.cpp  ScriptEngine.hpp  ScriptEvaluator.cpp  ScriptEvaluator.hpp
gsim/qt/tools/: AbstractInputTool.cpp  AbstractInputTool.hpp  AbstractSequenceTool.cpp  AbstractSequenceTool.hpp  AbstractTool.cpp  AbstractTool.hpp  DetailedLog.cpp  DetailedLog.hpp  DumpTool.cpp  DumpTool.hpp  Engine.cpp  Engine.hpp  ParametersFromFilesTool.cpp  ParametersFromFilesTool.hpp  Sender.cpp  Sender.hpp  SenderSequence.cpp  SenderSequence.hpp  StatusTool.cpp  StatusTool.hpp  ValueViewerTool.cpp  ValueViewerTool.hpp
gsim/qt/widgets/: ConnectionView.cpp  ConnectionView.hpp  ConnectionWidget.cpp  ConnectionWidget.hpp  CustomLayouts.cpp  CustomLayouts.hpp  FormWidget.cpp  FormWidget.hpp  IpAddressLineEdit.cpp  IpAddressLineEdit.hpp  MainWindow.cpp  MainWindow.hpp  SizeGrip.cpp  SizeGrip.hpp  SortableGroup.cpp  SortableGroup.hpp  StartStopButton.cpp  StartStopButton.hpp  Status.cpp  Status.hpp  TabWidget.cpp  TabWidget.hpp  TreeView.cpp  TreeView.hpp
gsim/qt/widgets/private/: ScriptEditor.cpp  ScriptEditor.hpp  codeeditor.cpp  codeeditor.h  qscriptsyntaxhighlighter.cpp
gsim/qwt/: CMakeLists.txt  PlotModel.cpp  PlotModel.hpp  PlotTool.cpp  PlotTool.hpp  SimplePlot.cpp  SimplePlot.hpp  export.hpp
gsim/qwt/private/: HistoricData.cpp  HistoricData.hpp  Plot.cpp  Plot.hpp
